# py-de-familia

./: .codecov.yml  .gitignore  .travis.yml  CODE-OF-CONDUCT-DE-FAMILIA.rst  CODIGO-DE-CONDUTA-DE-FAMILIA  LICENSE-DE-FAMILIA  Makefile  README.rst  RELEASE-NOTES.rst  TODO-DE-FAMILIA  pyproject.toml
config/: settings.toml
docs/: Makefile  font-logo.html
docs-de-familia/source/: conf.py
docs/source/: conf.py  index.rst
docs/source/files/: README.rst  RELEASE-NOTES.rst
py-de-familia/: cli.py  run.py
py_de_familia/: __init__.py  autocomplete-de-familia.sh  clidefamilia.py
src/: bottelegram.py  cli.py
src/domain/: __init__.py
tests/: requirements.txt  test_clidefamilia.py
